fix company overflow

--- a/_sass/company.scss
+++ b/_sass/company.scss
@@ -13,6 +13,7 @@
 // Info
 ////////////////////////////////////////////////////////////////////////////////
 .company__info {
+  overflow-x: hidden;
   margin-top: 10vh !important;
   .textblock {
     max-width: 1100px;
